@@ -12,6 +12,7 @@ XX/XX/XX
 **Improvements**
 * Support arbitrary script categories in the GtkTreeView in script preferences
 * Make ONNXHelper slightly more robust (!940)
+* Use descreening instead of subtraction to generate starnet starmask, for better integration with recomposition tool (!941)
 
 siril 1.4.0-beta4
 09/28/25
